--- a/voting-app.yaml
+++ b/voting-app.yaml
@@ -22,8 +22,10 @@ spec:
       - name: postgres
         image: postgres:9.4
         ports:
-        - containerPort: 5432apiVersion: v1
+        - containerPort: 5432
+        
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: db
@@ -62,8 +64,9 @@ spec:
       - name: redis
         image: redis
         ports:
-        - containerPort: 6379apiVersion: v1
+        - containerPort: 6379
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: redis
@@ -102,8 +105,9 @@ spec:
       - name: result-app
         image: dockersamples/examplevotingapp_result
         ports:
-        - containerPort: 80apiVersion: v1
+        - containerPort: 80
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: result-service
@@ -143,8 +147,9 @@ spec:
       - name: voting-app
         image: dockersamples/examplevotingapp_vote
         ports:
-        - containerPort: 80apiVersion: v1
+        - containerPort: 80
 ---
+apiVersion: v1
 kind: Service
 metadata:
   name: voting-service
